tests/paczka2/big_fuzzy/74674386.err
Error in line 1: dv0jSq A756 64,1
Error in line 2: dv0jSq S70 27,7
Error in line 3: dv0jSq A641 17,1
Error in line 8: P2VnYX A849 13,1
Error in line 13: P2VnYX A756 26,9
Error in line 18: P2VnYX S70 88,0
Error in line 31: dv0jSq A756 70,2
Error in line 28: MNRByE3xAf A756 171,3
Error in line 39: MNRByE3xAf A641 43,7
Error in line 42: mV7tj A756 328,9
Error in line 52: P2VnYX A8}9 }1,7
Error in line 41: P2VnYX A849 40,5
Error in line 54: dv0jSq S70 80,7
Error in line 60: F6K9UxWrZ5i A756 59,8
Error in line 46: x8YgY2G S70 15,4
Error in line 59: MNRByE3xAf A756 18,7
Error in line 75: dv0jSq A641 91,0
Error in line 78: P2VnYX A641 98,2
Error in line 69: A756 A849 6,4
Error in line 74: MNRByE3xAf A849 31,8
Error in line 81: P2VnYX A849 62,3
Error in line 84: MNRByE3xAf A641 85,6
Error in line 86: MNRByE3xAf S70 4,6
Error in line 91: MNRByE3xAf A756 89,6
Error in line 94: MNRByE3xAf A849 176,93
Error in line 96: mV7tj A641 -1,3
Error in line 98: mV7tj A849 14,5
Error in line 106: mV7tj A849 53,2
Error in line 90: dv0jSq A849 5,8
Error in line 109: A756 A641 9,0
Error in line 114: P2VnYX A756 64,7
Error in line 135: dv0jSq A641 79,8
Error in line 146: P2VnYX A641 43,2
Error in line 143: A756 A756 81,6
Error in line 155: A756 A849 43,2
Error in line 153: x8YgY2G A849 22,3
Error in line 170: mV7tj A641 1,6
Error in line 166: x8YgY2G S70 73,4
Error in line 172: dv0jSq A756 22,5
Error in line 173: MNRByE3xAf A641 98,1
Error in line 178: dv0jSq A641 42,0
Error in line 191: x8YgY2G A641 79,1
Error in line 198: A756 A641 57,8
Error in line 210: mV7tj A641 4,1
Error in line 214: x8YgY2G A756 48,8
Error in line 236: mV7tj A641 -1,6
